--- a/Scarb.toml
+++ b/Scarb.toml
@@ -1,9 +1,9 @@
 [package]
 name = "first_cairo"
 version = "0.1.0"
-
+edition = "2024_07"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 [dependencies]
-starknet = "=2.2.0"
+starknet = "2.11.4"
 
 [[target.starknet-contract]]
